--- a/style.scss
+++ b/style.scss
@@ -527,14 +527,14 @@ body {
 
     .main {
         gap: 39px;
-    }
 
-    .main__left img {
-        width: 386px;
-    }
+        &__left img {
+            width: 386px;
+        }
 
-    .main_content_title {
-        font-size: 26px;
+        &_content_title {
+            font-size: 26px;
+        }
     }
 
     .bold {
@@ -567,26 +567,27 @@ body {
         gap: 48px;
         padding-top: 48px;
         padding-bottom: 64px;
-    }
 
-    .opportunity_title {
-        font-size: 19.96px;
-    }
+        &_title {
+            font-size: 19.96px;
+        }
 
-    .opportunity_text {
-        font-size: 13.972px;
+        &_text {
+            font-size: 13.972px;
 
+        }
     }
 
     .application {
         justify-content: center;
         flex-direction: column;
         gap: 48px;
+
+        &_form {
+            margin-top: 27px;
+        }
     }
 
-    .application_form {
-        margin-top: 27px;
-    }
 
     .footer {
         padding-left: 2%;
@@ -603,18 +604,18 @@ body {
 
     .main-cart {
         flex-direction: column;
-    }
 
-    .main-cart__buttons {
-        justify-content: space-around;
-    }
+        &__buttons {
+            justify-content: space-around;
+        }
 
-    .main-cart__right {
-        display: flex;
-        gap: 16px;
-        padding-top: 64px;
-        align-items: center;
-        justify-content: center;
+        &__right {
+            display: flex;
+            gap: 16px;
+            padding-top: 64px;
+            align-items: center;
+            justify-content: center;
+        }
     }
 
     .regist-main__info_text {
@@ -622,148 +623,4 @@ body {
     }
 }
 
-@media (max-width: 767px) {
-    .center {
-        padding-left: calc(50% - 170px);
-        padding-right: calc(50% - 170px);
-    }
-
-    .header {
-        padding: 18px 18px 19px;
-        justify-content: space-between;
-    }
-
-    .no_icon {
-        display: none
-    }
-
-    .main {
-        padding: 148px 56px 149px;
-        margin-bottom: 64px;
-    }
-
-    .main__left {
-        display: none
-    }
-
-    .vertical_stripe {
-        height: 61px;
-        margin-right: 15px;
-    }
-
-    .main_content_title {
-        font-size: 20px;
-    }
-
-    .bold {
-        font-size: 38px;
-    }
-
-    .category {
-        grid-template-columns: repeat(1, 343px);
-        gap: 32px;
-        padding-bottom: 64px;
-    }
-
-    .category_subtitle {
-        font-size: 24px;
-    }
-
-    .wide_item {
-        grid-column: span 1;
-    }
-
-    .featured_items_info {
-        padding-bottom: 65px;
-    }
-
-    .catalog {
-        grid-template-columns: repeat(1, 359px);
-        gap: 17px;
-        padding-bottom: 41px;
-    }
-
-    .featured_items {
-        padding-bottom: 85px;
-    }
-
-    .opportunity {
-        flex-direction: column;
-        align-items: center;
-        gap: 48px;
-        padding-top: 48px;
-        padding-bottom: 64px;
-    }
-
-    .opportunity_title {
-        font-size: 19.96px;
-    }
-
-    .opportunity_text {
-        font-size: 13.972px;
-
-    }
-
-    .application {
-        align-items: center;
-        flex-direction: column;
-        justify-content: space-around;
-    }
-
-    .main-cart {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-
-    }
-
-    .main-cart__buttons {
-        display: flex;
-        justify-content: space-evenly;
-        gap: 9px;
-    }
-
-    .main-cart__buttons_link {
-        padding: 9px 10px;
-    }
-
-    .main-cart__form {
-        margin-top: 48px;
-        margin-bottom: 48px;
-    }
-
-
-}
-
-@media (max-width: 400px) {
-    .center {
-        padding-left: calc(50% - 152px);
-        padding-right: calc(50% - 152px);
-    }
-
-    .main {
-        padding: 148px 30px 149px;
-        margin-bottom: 64px;
-    }
-
-    .main_content_title {
-        font-size: 18px;
-    }
-
-    .bold {
-        font-size: 36px;
-    }
-
-    .category {
-        grid-template-columns: repeat(1, 304px);
-        gap: 32px;
-        padding-bottom: 64px;
-    }
-
-    .catalog {
-        grid-template-columns: repeat(1, 310px);
-        gap: 17px;
-        padding-bottom: 41px;
-    }
-
-}
+@import "mobile"
